--- a/style.css
+++ b/style.css
@@ -86,19 +86,9 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
+aside {
+    margin-bottom:32px;
+    color:#ffffff;
 }
 
 .benefit-lead h3 {
