--- a/style.css
+++ b/style.css
@@ -178,13 +178,13 @@ aside {
     font-size: 36px;
 }
 /*  FOOTER */
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
