--- a/style.css
+++ b/style.css
@@ -91,20 +91,10 @@ aside {
     color:#ffffff;
 }
 
-.benefit-lead h3 {
+ h3 {
     margin-bottom: 10px;
     text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+ }
 
 .benefit-lead img {
     display: block;
@@ -151,15 +141,7 @@ aside {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
+img {
     max-height: 200px;
 }
 
