--- a/style.css
+++ b/style.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 /*  HEADER */
-.header {
+nav {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+nav h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+nav h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+nav div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -36,7 +36,7 @@ body {
     list-style-type: none;
 }
 
-.header div ul li {
+nav div ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -171,16 +171,26 @@ footer h2 {
     font-size: 20px;
 }
 
-@media (max-width: 575.98px) { }
+@media (max-width: 575.98px) {
+
+ }
 
 
-@media (min-width: 576px) and (max-width: 767.98px) {  }
+@media (min-width: 576px) and (max-width: 767.98px) {  
+
+}
 
 
-@media (min-width: 768px) and (max-width: 991.98px) {  }
+@media (min-width: 768px) and (max-width: 991.98px) {
+
+  }
 
 
-@media (min-width: 992px) and (max-width: 1199.98px) {  }
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+
+ }
 
 
-@media (min-width: 1200px) {  }
+@media (min-width: 1200px) { 
+
+ }
