--- a/style.css
+++ b/style.css
@@ -145,17 +145,7 @@ img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -168,7 +158,7 @@ footer {
 }
 
 footer h2 {
-    font-size: 20px;
+    font-size: 28px;
 }
 
 @media (max-width: 575.98px) {
